[gd_scene load_steps=23 format=3 uid="uid://bkupnt06g674o"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_jlae7"]
[ext_resource type="Texture2D" uid="uid://doq2qfchmahow" path="res://assests/sprites/charcter.png" id="2_e0b28"]
[ext_resource type="Script" path="res://scripts/hit.gd" id="3_amrwm"]
[ext_resource type="Texture2D" uid="uid://c5ocjio8qtwij" path="res://assests/sprites/cursor.png" id="3_uvc7y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p26w0"]
atlas = ExtResource("2_e0b28")
region = Rect2(0, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_mtnde"]
atlas = ExtResource("2_e0b28")
region = Rect2(16, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_r65b1"]
atlas = ExtResource("2_e0b28")
region = Rect2(32, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_iabmg"]
atlas = ExtResource("2_e0b28")
region = Rect2(48, 0, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_naame"]
atlas = ExtResource("2_e0b28")
region = Rect2(0, 57, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_3px5s"]
atlas = ExtResource("2_e0b28")
region = Rect2(16, 57, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_efxas"]
atlas = ExtResource("2_e0b28")
region = Rect2(32, 57, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdow8"]
atlas = ExtResource("2_e0b28")
region = Rect2(48, 57, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_8glj5"]
atlas = ExtResource("2_e0b28")
region = Rect2(0, 38, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_wiwrs"]
atlas = ExtResource("2_e0b28")
region = Rect2(16, 38, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_iixg0"]
atlas = ExtResource("2_e0b28")
region = Rect2(32, 38, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_qxuu3"]
atlas = ExtResource("2_e0b28")
region = Rect2(0, 19, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu7ln"]
atlas = ExtResource("2_e0b28")
region = Rect2(16, 19, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pf4g"]
atlas = ExtResource("2_e0b28")
region = Rect2(32, 19, 16, 19)

[sub_resource type="AtlasTexture" id="AtlasTexture_pk8d4"]
atlas = ExtResource("2_e0b28")
region = Rect2(48, 19, 16, 19)

[sub_resource type="SpriteFrames" id="SpriteFrames_bi3yj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p26w0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mtnde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r65b1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iabmg")
}],
"loop": true,
"name": &"idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_naame")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3px5s")
}, {
"duration": 8.0,
"texture": SubResource("AtlasTexture_efxas")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdow8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_naame")
}],
"loop": false,
"name": &"jab",
"speed": 24.0
}, {
"frames": [{
"duration": 0.8,
"texture": SubResource("AtlasTexture_8glj5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wiwrs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iixg0")
}],
"loop": false,
"name": &"jump",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qxuu3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu7ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pf4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pk8d4")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mbocq"]
radius = 2.0
height = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_0gs4s"]
radius = 1.0

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_jlae7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_bi3yj")
animation = &"jab"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -1)
shape = SubResource("CapsuleShape2D_mbocq")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.208

[node name="AtkTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="hit" type="Area2D" parent="." groups=["DmgArea"]]
monitoring = false
priority = 1
script = ExtResource("3_amrwm")

[node name="hitarea" type="CollisionShape2D" parent="hit" groups=["DmgArea"]]
position = Vector2(8, -2)
shape = SubResource("CircleShape2D_0gs4s")
disabled = true

[node name="Sprite2D" type="Sprite2D" parent="hit/hitarea" groups=["DmgArea"]]
visible = false
position = Vector2(3.57628e-07, 0)
scale = Vector2(0.256093, 0.256094)
texture = ExtResource("3_uvc7y")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="AtkTimer" to="." method="_on_atk_timer_timeout"]
[connection signal="area_entered" from="hit" to="." method="_on_hit_area_entered"]
